--- a/App.config
+++ b/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="sales_and_inventory.Properties.Settings.shopConnectionString"
+            connectionString="server=localhost;user id=root;database=shop"
+            providerName="MySql.Data.MySqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
     </startup>
